force-app/main/default/objects/BusinessUnits__mdt/BusinessUnits__mdt.object-meta.xml
<CustomObject>
    <description>The metadata type &quot;Business Units&quot; encompasses organizational subdivisions or departments within a company. It categorizes and organizes units based on their specific functions or areas of operation.</description>
    <label>Business Unit</label>
    <pluralLabel>Business Units</pluralLabel>
</CustomObject>