force-app/main/default/objects/BusinessUnits__mdt/fields/BusinessUnitPick__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitPick__c</fullName>
    <description>List of all the specfic business units within Heijmans Infra.</description>
    <inlineHelpText>List of all the specfic business units within Heijmans Infra.</inlineHelpText>
    <label>Business Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RP Procurement</fullName>
                <default>true</default>
                <label>RP Procurement</label>
            </value>
            <value>
                <fullName>RP North-East-Central</fullName>
            </value>
            <value>
                <fullName>RP South-West</fullName>
            </value>
            <value>
                <fullName>RP South</fullName>
            </value>
            <value>
                <fullName>RP North-West</fullName>
            </value>
            <value>
                <fullName>RP Integrated Regional Projects</fullName>
            </value>
            <value>
                <fullName>CP Procurement</fullName>
            </value>
            <value>
                <fullName>CP Design</fullName>
            </value>
            <value>
                <fullName>CP PROM</fullName>
            </value>
            <value>
                <fullName>CP Realisation</fullName>
            </value>
            <value>
                <fullName>AM Assetmanagement</fullName>
            </value>
            <value>
                <fullName>AM Schiphol</fullName>
            </value>
            <value>
                <fullName>TE SI&amp;T</fullName>
            </value>
            <value>
                <fullName>TE E&amp;I</fullName>
            </value>
            <value>
                <fullName>EN Connections</fullName>
            </value>
            <value>
                <fullName>EN Stations</fullName>
            </value>
            <value>
                <fullName>EN Area Development</fullName>
            </value>
            <value>
                <fullName>EN Services &amp; Distribution</fullName>
            </value>
            <value>
                <fullName>WS Road Specializations</fullName>
            </value>
            <value>
                <fullName>BS Soil Specializations</fullName>
            </value>
            <value>
                <fullName>CS Civil Engineering Specializations</fullName>
            </value>
            <value>
                <fullName>Asphalt Technology</fullName>
            </value>
            <value>
                <fullName>Heijmans Equipment Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>