force-app/main/default/objects/BusinessUnits__mdt/fields/BusinessUnitTranslation__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitTranslation__c</fullName>
    <description>Translating the Business Unit name which is used in the generation BUSA records with flow.</description>
    <inlineHelpText>Translating the Business Unit name which is used in the generation BUSA records with flow.</inlineHelpText>
    <label>Business Unit Translation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>