force-app/main/default/objects/BusinessUnits__mdt/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <description>A cluster within Heijmans refers to a grouping or departmental subdivision.</description>
    <inlineHelpText>A cluster within Heijmans refers to a grouping or departmental subdivision.</inlineHelpText>
    <label>Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regional projects</fullName>
                <default>true</default>
                <label>Regional projects</label>
            </value>
            <value>
                <fullName>Central projects</fullName>
            </value>
            <value>
                <fullName>Assetmanagement</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Specialism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>